# ska-low-mccs-spshw

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .release  .test_durations  .wait_for_report_file.py  CHANGELOG  CHANGELOG.md  CODEOWNERS  Dockerfile  K8S-README.md  LICENSE  MANIFEST.in  MANIFEST.skao.int  Makefile  Pipfile  README.md  aavs_system-1.0-py3-none-any.whl  aavs_system-1.1-py3-none-any.whl  deploy.sh  deps.txt  develop.Dockerfile  download_firmware.sh  install_ansible.yml  install_script.sh  mydock  mypy.ini  pyfabil-1.0-py3-none-any.whl  pyfabil-1.1-py3-none-any.whl  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-tst.txt  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json
.gitlab/merge_request_templates/: Default.md
.make/: .make-release-support  develop.mk  docker.mk  docs.mk  k8s.mk  release.mk
chart-values/: values-aavs2.yaml  values-aavs3-in-low-itf.yaml  values-aavs3.yaml  values-arcetri.yaml  values-gmrt.yaml  values-k8s-test.yaml  values-low-itf.yaml  values-oxford.yaml  values-psi-low.yaml
charts/: _helm_test_values.template  test-fetcher.yaml
charts/jupyter-notebook/: REAL_SUBRACK_TPM.ipynb  Real_TPM.ipynb
charts/mccs/: Chart.yaml  README.md  values.yaml
charts/mccs-artifact/: Chart.yaml  values.yaml
charts/mccs-demo/: Chart.yaml  values.yaml
charts/mccs-mvp/: Chart.yaml  values.yaml
charts/mccs-umbrella/: Chart.yaml  values.yaml
charts/mvp-low/: Chart.yaml  values.yaml
charts/ska-low-mccs/: Chart.yaml  values.yaml  values_gmrt.yaml
charts/ska-low-mccs-aavs/: Chart.yaml  README.md  values.yaml
charts/ska-low-mccs-spshw/: Chart.yaml  README.md  values-aavs2.yaml  values-arcetri.yaml  values-gmrt.yaml  values-k8s-test.yaml  values-oxford.yaml  values-psi-low.yaml  values.schema.json  values.yaml
charts/ska-tango-tangogql/: Chart.yaml  values.yaml
charts/ska-tango-taranta-dashboard-pvc/: Chart.yaml  values.yaml
charts/tango-base/: values.yaml
charts/tango-util/: Chart.yaml
charts/test/: Chart.yaml  values.yaml
charts/umbrella-mccs/: .values.yaml.swp  Chart.yaml  values.yaml
charts/umbrella-mccs-spshw/: Chart.yaml  values.yaml
dashboards/: MCCS-SPSHW-Station-Monitoring.wj  MCCS_Abort_Testing_Dashboard.wj  MCCS_Allocate_Release.wj  MCCS_LRC_Testing_Dashboard.wj  MCCS_Message_Queue_Demo.wj  MCCS_Subrack_manager.wj  MCCS_Thickened_Slice_Station.wj  MCCS_Thickened_Slice_Tile.wj  MCCS_Tile_Connectivity.wj  MCCS_Tile_Health_And_Debug.wj  MCCS_Tile_Power_Supplies.wj  MCCS_Tile_Signal_Diag.wj  MCCS_Tile_Temperature.wj  MCCS_Tile_Versions.wj  MCCS_init_tpms.wj  MCCS_power_flow.wj  MCCS_webjive_health.wj  mccs_dashboard.json
demos/: demo_PI6_run_sheet.py  demo_run_sheet.py
docs/: Dockerfile  Makefile  requirements.txt
docs/scripts/: document_schemas.py  gen.sh  generate_class_diagrams.sh  generate_uml_class_diagrams.py
docs/source/: LfaaMaster.rst  MccsAntenna.rst  MccsMaster.rst  MccsStation.rst  MccsStationBeam.rst  MccsSubarray.rst  MccsTile.rst  antenna.rst  api.rst  apiu.rst  cluster_manager.rst  conf.py  control_model.rst  device.rst  getting_started.rst  index.rst  master.rst  setup_deployment_environment.rst  setup_development_environment.rst  subarray.rst  tel_state.rst  tile.rst  uml.txt  utils.rst
docs/src/: conf.py  index.rst
helmfile.d/: helmfile.yaml  helmfile.yaml.gotmpl
helmfile.d/config/: config-aa0.5.yaml  config-low-itf.yaml
helmfile.d/platform/: aavs2.yaml  aavs3-in-low-itf.yaml  aavs3.yaml  arcetri.yaml  gmrt.yaml  minikube.yaml  oxford.yaml  psi-low.yaml  stfc-ci.yaml  stfc-ral.yaml
helmfile.d/templates/: wren-simulator.yaml.gotmpl
helmfile.d/values/: globals.yaml.gotmpl  jupyterhub.yaml  skuid.yaml  taranta.yaml  values-arcetri.yaml  values-ci.yaml  values-gmrt.yaml  values-jbo.yaml  values-low-itf.yaml  values-oxford.yaml  values-psi-low.yaml  values-ral-1.yaml  values-ral-2.yaml  values-ral-3.yaml  values-ral-4.yaml  (+4 more)
helmfiles/: aavs3.yaml
integration_tests/: test_master_subarray.py
local_telmodel/: ci-1.yaml  real-daq-1.yaml
manifests/: aa0.5-manifests.yaml  psi-low-manifests.yaml
notebooks/: calibrate_station.ipynb  daq_correlation_mode.ipynb  daq_correlator_demo.ipynb  enable_disable_beam_flagging.ipynb  equalise_powers.ipynb  generate_4beams.ipynb  generate_8beams.ipynb  generate_beam.ipynb  run_self_check_tests.ipynb  skb_490.py  spshw_Taranta.ipynb  start_daq.ipynb  station_init.ipynb  test_aavs_tiles.ipynb  test_allocate.ipynb  test_max_fan_speed.ipynb  test_scan_execution.ipynb  test_station_beam.ipynb  thin_slice.ipynb  tile_read_attributes.ipynb  use_antenna_buffer.ipynb
pogo/: MccsAPIU.xmi  MccsAntenna.xmi  MccsClusterManager.xmi  MccsController.xmi  MccsDevice.xmi  MccsGroupDevice.xmi  MccsMaster.xmi  MccsStation.xmi  MccsStationBeam.xmi  MccsSubarray.xmi  MccsSubrack.xmi  MccsTelState.xmi  MccsTile.xmi  MccsTransientBuffer.xmi
resources/: eda-config-aavs3.yaml  eda-config.yaml
schemas/: MccsMaster_Allocate_lax.json  MccsMaster_Allocate_strict.json
scripts/: README.md  attribute2archive.json  config.json  enable_archiver.yaml  generate_pasd_config.py  get_config_data.py  monitor.sh  setup_part1.sh  setup_part2.sh  setup_part3.sh  setup_tango_grafana.sh  skampi.patch  tear_down_minikube.sh  tear_down_tango_grafana.sh  test_aavs_tiles.py  thin_slice.ipynb
skamccs/: __init__.py  release.py
test-docs/: requirements.txt
testing/: requirements.txt  testbeds.yaml
tests/: __init__.py  conftest.py  daq_harness.py  harness.py  keepdir  test_LfaaMaster.py  test_MccsAPIU.py  test_MccsAntenna.py  test_MccsClusterManager.py  test_MccsDevice.py  test_MccsGroupDevice.py  test_MccsMaster.py  test_MccsStation.py  test_MccsStationBeam.py  test_MccsSubarray.py  test_MccsTelState.py  test_MccsTile.py  test_MccsTileSimulator.py  test_MccsTileSimulator.pypy  test_MccsTransientBuffer.py  test_integration.py  test_package.py  test_tools.py  test_utils.py  testbeds.yaml  xray-config.json
tmdata/: antenna_export_w2.geojson
tpm/: pyvenv.cfg
(+1422 files in other folders)
