[tool.poetry]
name = "ska-low-mccs-spshw"
version = "2.0.0"
description = "The Monitoring, Control and Calibration Subsystem (MCCS SPSHW) of the SKA Low telescope"
license = "BSD-3-Clause"
authors = ["MCCS team"]
readme = "README.md"
documentation = "https://developer.skatelescope.org/projects/ska-low-mccs-spshw"

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
priority = "primary"

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'
priority = "supplemental"

[tool.poetry.dependencies]
python = "~3.10"
aavs_system = { git = "https://gitlab.com/ska-telescope/aavs-system.git", tag = "2.1.3", subdirectory = "python" }
pyfabil = { git = "https://gitlab.com/ska-telescope/pyfabil.git", tag = "2.1.0" }
fire = "^0.5.0"
numpy = "^1.26.4"
pytango = "^10.0.0"
PyYAML = "^6.0.1"
requests = "^2.31.0"
scipy = "^1.11.2"
ska-control-model = { version = "^1.2.0", extras = ["health_rollup"] }
ska-tango-base = "^1.2.3"
ska-low-mccs-common = "^1.4.0"
ska-ser-skuid = "^3.3.3"
fastapi = "^0.103.1"
pydantic-core = "^2.18.1"
annotated-types = "^0.6.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
typing-extensions = "^4.7.1"
future = "^0.18.3"
astropy="5.3.4"
jsonschema = "~4.22.0"
referencing = "~0.28.4"
jsonschema-specifications = "~2023.03.6"
ska-low-mccs-daq-interface = "^1.0.0"
watchdog = "^3.0.0"
h5py = "^3.12.1"
lockfile = "^0.12.2"
scapy = "^2.6.0"
pytz = "^2024.2"
configparser = "^7.1.0"
matplotlib = "^3.9.2"
mongoengine = "^0.29.1"
pymongo = "^4.10.1"
tabulate = "^0.9.0"
get_nic = "^0.0.3"
pyqt5 = "^5.15.11"
netifaces-binary = "^0.11.0"
recommonmark = "^0.7.1"
pysnmp = "^7.1.4"
ska-ser-snmp = "^0.4.1"

# The following have been added for the DaqSimulator.
singleton-decorator = "1.0.0"
slacker = "0.14.0"
ska-telmodel = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pylint = "^2.17.5"
pylint-junit = "^0.3.2"
pytest = "^6.2"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.1.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.11.1"
pytest-repeat = "^0.9.1"
pytest-timeout = "^2.1.0"
coverage = "^7.3.0"
black = "^23.7.0"
darglint = "^1.8.1"
flake8 = "^6.1.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-builtins = "^2.1.0"
flake8-docstrings = "^1.7.0"
flake8-use-fstring = "^1.4"
flake8-rst-docstrings = "^0.3.0"
mypy = "^1.5.1"
pep8-naming = "^0.13.3"
types-requests = "^2.31.0.2"
types-pyyaml = "^6.0.12.11"
isort = "^5.12.0"
httpx = "^0.24.1"
ska-tango-testing = "^0.7.3"
pysnmp = "^7.1.4"
ska-ser-snmp = "^0.4.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.2.1"
ska-ser-sphinx-theme = "^0.1.1"
sphinx-autodoc-typehints = "^1.23.0"
sphinxcontrib-plantuml = "^0.25"
fastapi = "^0.103.1"
pydantic-core = "^2.18.1"
annotated-types = "^0.6.0"
fire = "^0.5.0"
PyYAML = "^6.0.1"
typing-extensions = "^4.7.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
ska-low-mccs-daq-interface = "^1.0.0"
ska-telmodel = "^1.4.1"
pysnmp = "^7.1.4"
ska-ser-snmp = "^0.4.1"

[tool.poetry.scripts]
spshw = "ska_low_mccs_spshw:main"
SpsStation = "ska_low_mccs_spshw.station.station_device:main"
MccsSubrack = "ska_low_mccs_spshw.subrack.subrack_device:main"
SubrackSimulator = "ska_low_mccs_spshw.subrack.subrack_simulator_server:main"
MccsTile = "ska_low_mccs_spshw.tile.tile_device:main"
MccsPdu = "ska_low_mccs_spshw.pdu.pdu_device:main"
Mccs-tile = "ska_low_mccs_spshw.tile.tile_cli:main"
MccsDaqReceiver = "ska_low_mccs_spshw.daq_receiver.daq_receiver_device:main"
DaqSimulator = "ska_low_mccs_spshw.daq_receiver.daq_simulator:main"


[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "--json-report --json-report-file=build/reports/report.json --cov-report html:build/htmlcov --cov-report xml:build/reports/code-coverage.xml --cov-report term:skip-covered --cov=ska_low_mccs_spshw --junitxml=build/reports/unit-tests.xml --verbose"
console_output_style = "progress"
junit_family = "legacy"
markers = ["XTP-25768",
"XTP-25769",
"XTP-34297",
"XTP-34300",
"XTP-34301",
"XTP-25944",
"XTP-25989",
"XTP-25946",
"XTP-21181",
"XTP-21182",
"XTP-21184",
"XTP-21185",
"XTP-17870",
"XTP-17871",
"XTP-17875",
"XTP-17876",
"XTP-34316",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
data_file = ".coverage/.coverage"
branch = true
source = ["ska_low_mccs"]

omit=[
    # team decision that testing of CLIs is unnecessary
    "*/*_cli.py",
    # legacy code, no point investing in test coverage
    "*/tile_1_2.py",
]

[tool.coverage.report]
show_missing = false

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
