[project]
dependencies = [
    "ska-low-sps-tpm-api @ git+https://gitlab.com/ska-telescope/ska-low-sps-tpm/ska-low-sps-tpm-api/@3.0.0",
    "fire >= 0.5.0, <0.6.0",
    "numpy >= 1.26.4, <2.0.0",
    "pytango >= 10.0.3, <10.1.0",
    "PyYAML >= 6.0.1, <7.0.0",
    "requests >= 2.31.0, <3.0.0",
    "scipy >= 1.11.2, <2.0.0",
    "ska-control-model[health_rollup] >= 1.2.0, <2.0.0",
    "ska-tango-base == 1.3.2",
    "ska-low-mccs-common >= 4.4.5, <5.0.0",
    "ska-low-mccs-daq >= 3.2.0, <4.0.0",
    "ska-telmodel >= 1.11.0, <2.0.0",
    "ska-ser-skuid >= 3.3.3, <4.0.0",
    "fastapi >= 0.103.1, <0.104.0",
    "pydantic-core >= 2.18.1, <2.19.0",
    "annotated-types >= 0.6.0, <0.7.0",
    "uvicorn[standard] >= 0.23.2, <0.24.0",
    "typing-extensions >= 4.7.1, <5.0.0",
    "future >= 0.18.3, <0.19.0",
    "astropy >= 5.3.4, <6.0.0",
    "jsonschema >= 4.24.0, <5.0.0",
    "referencing >= 0.31.0, <0.32.0",
    "jsonschema-specifications >= 2025.4.1, <2026.0.0",
    "fqdn >= 1.5.1, <2.0.0",
    "icalendar >= 5.0.12, <6.0.0",
    "types-icalendar >= 6.3.1.20250521, <7.0.0",
    "backoff >= 2.2.1, <3.0.0",
    "recurring-ical-events >= 2.2.1, <3.0.0",
    "watchdog >= 3.0.0, <4.0.0",
    "h5py >= 3.12.1, <4.0.0",
    "lockfile >= 0.12.2, <1.0.0",
    "scapy >= 2.6.0, <3.0.0",
    "semver >= 3.0.4, <4.0.0",
    "pytz >= 2024.2, <2025.0",
    "types-pytz >= 2025.2.0.20250516, <2026.0.0",
    "configparser >= 7.1.0, <8.0.0",
    "matplotlib >= 3.9.2, <4.0.0",
    "mongoengine >= 0.29.1, <1.0.0",
    "pymongo >= 4.10.1, <5.0.0",
    "tabulate >= 0.9.0, <1.0.0",
    "get_nic >= 0.0.3, <1.0.0",
    "pyqt5 >= 5.15.11, <6.0.0",
    "netifaces-binary >= 0.11.0, <1.0.0",
    "recommonmark >= 0.7.1, <1.0.0",
    "ska-ser-snmp >= 0.6.1, <1.0.0"
]

name = "ska-low-mccs-spshw"
version = "11.3.1"
description = "The Monitoring, Control and Calibration Subsystem (MCCS SPSHW) of the SKA Low telescope"
license = "BSD-3-Clause"
authors = [{name = "MCCS team"}]
readme = "README.md"
documentation = "https://developer.skatelescope.org/projects/ska-low-mccs-spshw"
requires-python = ">=3.10, <3.11"

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.uv.index]]
name = "PyPI-public"
url = "https://pypi.org/simple"


[dependency-groups]
dev = [
    "pre-commit >= 3.4.0, <4.0.0",
    "pylint >= 2.17.5, <3.0.0",
    "pylint-junit >= 0.3.2, <1.0.0",
    "pytest >= 7.0.0, <8.0.0",
    "pytest-xdist >= 3.6.1, <4.0.0",
    "pytest-bdd >= 6.1.1, <7.0.0",
    "pytest-cov >= 4.1.0, <5.0.0",
    "pytest-forked >= 1.6.0, <2.0.0",
    "pytest-json-report >= 1.5.0, <2.0.0",
    "pytest-mock >= 3.11.1, <4.0.0",
    "pytest-repeat >= 0.9.1, <1.0.0",
    "pytest-timeout >= 2.1.0, <3.0.0",
    "coverage >= 7.3.0, <8.0.0",
    "black >= 23.7.0, <24.0.0",
    "darglint >= 1.8.1, <2.0.0",
    "flake8 >= 6.1.0, <7.0.0",
    "flake8-formatter-junit-xml >= 0.0.6, <1.0.0",
    "flake8-builtins >= 2.1.0, <3.0.0",
    "flake8-docstrings >= 1.7.0, <2.0.0",
    "flake8-use-fstring >= 1.4, <2.0.0",
    "flake8-rst-docstrings >= 0.3.0, <1.0.0",
    "mypy >= 1.5.1, <2.0.0",
    "pep8-naming >= 0.13.3, <1.0.0",
    "types-requests >= 2.31.0.2, <3.0.0",
    "types-pyyaml >= 6.0.12.11, <7.0.0",
    "isort >= 5.12.0, <6.0.0",
    "httpx >= 0.24.1, <0.25.0",
    "ska-tango-testing >= 0.7.3, <0.8.0",
    "ska-ser-snmp >= 0.6.1, <0.7.0"
]

docs = [
    "sphinx >= 8.1.0, <9.0.0",
    "ska-ser-sphinx-theme >= 0.2.1, <1.0.0",
    "sphinx-autodoc-typehints >= 1.23.0, <2.0.0",
    "sphinxcontrib-plantuml >= 0.25, <1.0.0",
    "fastapi >= 0.103.1, <0.104.0",
    "pydantic-core >= 2.18.1, <2.19.0",
    "annotated-types >= 0.6.0, <1.0.0",
    "fire >= 0.5.0, <1.0.0",
    "PyYAML >= 6.0.1, <7.0.0",
    "typing-extensions >= 4.7.1, <5.0.0",
    "uvicorn[standard] >= 0.23.2, <0.24.0",
    "ska-telmodel >= 1.4.1, <2.0.0",
    "ska-ser-snmp >= 0.6.1, <0.7.0",
    "semver >= 3.0.4, <4.0.0"
]

[project.scripts]
spshw = "ska_low_mccs_spshw:main"
SpsStation = "ska_low_mccs_spshw.station.station_device:main"
MccsSubrack = "ska_low_mccs_spshw.subrack.subrack_device:main"
SubrackSimulator = "ska_low_mccs_spshw.subrack.subrack_simulator_server:main"
MccsTile = "ska_low_mccs_spshw.tile.tile_device:main"
MccsPdu = "ska_low_mccs_spshw.pdu.pdu_device:main"
PowerMarshaller = "ska_low_mccs_spshw.power_marshaller.power_marshaller_device:main"
Mccs-tile = "ska_low_mccs_spshw.tile.tile_cli:main"
is_calendar_booked = "utils.scripts.is_calendar_booked:main"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "--forked -n 16 --json-report --json-report-file=build/reports/report.json --cov-report html:build/htmlcov --cov-report xml:build/reports/code-coverage.xml --cov-report term:skip-covered --cov=ska_low_mccs_spshw --junitxml=build/reports/unit-tests.xml --verbose"
console_output_style = "progress"
junit_family = "legacy"
markers = ["XTP-25768",
"XTP-25769",
"XTP-34297",
"XTP-34300",
"XTP-34301",
"XTP-25944",
"XTP-25989",
"XTP-25946",
"XTP-21181",
"XTP-21182",
"XTP-21184",
"XTP-21185",
"XTP-17870",
"XTP-17871",
"XTP-17875",
"XTP-17876",
"XTP-34316",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
data_file = ".coverage/.coverage"
branch = true
source = ["ska_low_mccs"]

omit=[
    # team decision that testing of CLIs is unnecessary
    "*/*_cli.py",
    # legacy code, no point investing in test coverage
    "*/tile_1_2.py",
]

[tool.coverage.report]
show_missing = false

